variues css clean ups -- fixed missing scrollbar issue

--- a/pkg/popup/index.css
+++ b/pkg/popup/index.css
@@ -11,14 +11,13 @@ body {
     background-color: var(--main-background);
     color: var(--text-primary-color);
 
-    width: 365px;
+    width: 500px;
     height: 550px;
 
     font-family: sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.4;
-    overflow: hidden;
 }
 
 header {
@@ -48,8 +47,8 @@ main {
     border: solid 12px var(--card-background);
     border-radius: 5px;
 
-    height: 66%;
-    width: 100%;
+    max-height: 66%;
+    width: 96%;
 
     margin-top: 10px;
     margin-bottom: 10px;
@@ -108,9 +107,6 @@ nav a:hover {
 
 #content-div {
     font-size: 1.2em;
-
-    overflow-y: auto;
-    overflow-x: hidden;
 }
 
 table {
